--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ botocore>=1.31.0
 python-dotenv>=1.0.0
 pathlib2>=2.3.7
 
+# PDF generation
+reportlab>=4.0.0
+
 # Development dependencies (optional)
 jupyter>=1.0.0
 matplotlib>=3.7.0
